0.5.9 / 2012-07-26

* Bug fixes

  * Don't try to use ActiveRecord::Base.checkout with SQLite - it causes "Could not find table" errors

0.5.8 / 2012-07-26

* Breaking changes

  * No longer automatically adds inheritance columns - you should specify them like "col :type"

* Enhancements

  * A bit more testing of how primary keys work.

* Notes

  * Something is going horribly wrong with SQLite support - lots of "Could not find table" errors. Hoping we can revisit this when sqlite3 gem 1.3.7 comes out.

0.5.7 / 2012-06-22

* Bug fix

  * In MySQL, properly create non-standard primary keys for one-column tables.

0.5.6 / 2012-06-22

* Enhancements

  * Support non-autoincrementing integer primary keys in MySQL

0.5.5 / 2012-06-20

* Enhancements

  * Remove lock_method stuff that really wasn't helping.

0.5.4 / 2012-05-08

* Enhancements

  * Slightly better way to get name of current database for locking purposes.

0.5.3 / 2012-04-24

* Enhancements

  * Cache name of the current database to speed things up.

0.5.2 / 2012-04-19

* Bug fixes

  * Fix indexes on multiple columns. Amazing how much damage a single #to_s can do.

0.5.1 / 2012-04-19

* Bug fixes

  * Fix require order... rookie mistake.

0.5.0 / 2012-04-19

* Known issues

  * Custom inheritance columns will be ignored unless you have activerecord >3.2.3 (unreleased as of this writing). The bug is https://github.com/rails/rails/pull/5327

* Breaking changes

  * the block form (schema {}) is removed
  * .col only accepts one column at a time
  * .col no longer accepts :as => :references
      was: col :group, :as => :references
      now: col :group_id, :type => :integer
  * .col no longer accepts :index => true
      was: col :foo, :index => true
      now: col :foo and then add_index :foo
  * A whole bunch of class methods are no longer mixed into ActiveRecord::Base (see Enhancements below)

* Enhancements
